added address info

--- a/index.html
+++ b/index.html
@@ -833,19 +833,19 @@
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/pin.svg" alt="" />
-								<span>Ave 11, New York, USA</span>
+								<span>Berlin, Germany.</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/call.svg" alt="" />
-								<span>+77 442 55 57</span>
+								<span>+49 1573 2619095</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/email.svg" alt="" />
-								<span>hello@gmail.com</span>
+								<span>hello@luisjoseborges.com</span>
 							</div>
 						</li>
 					</ul>
