added calendly linkedin and form submission

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 						</span>
 					</div>
 					<div class="shane_tm_button">
-						<a href="#" download><span>Schedule a call</span></a>
+						<a href="https://calendly.com/luisjoseborges/30min" download><span>Schedule a call</span></a>
 					</div>
 				</div>
 			</div>
@@ -457,7 +457,7 @@
 					</ul>
 				</div>
 				<div class="shane_tm_button">
-					<a href="img/resume/resume.jpg" download><span>My LinkedIn page</span></a>
+					<a href="https://www.linkedin.com/in/luisjborges/" download><span>My LinkedIn page</span></a>
 				</div>
 				<div class="shane_tm_skills">
 					<div class="left">
@@ -864,21 +864,21 @@
 					<div class="wrapper">
 						<div class="left">
 							<div class="fields">
-								<form action="/" method="post" class="contact_form" id="contact_form" autocomplete="off">
+								<form name="contact" class="contact_form" id="contact_form" autocomplete="off" netlify>
 									<div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
 									<div class="empty_notice"><span>Please Fill Required Fields</span></div>
 									<div class="first">
 										<ul>
 											<li>
-												<input id="name" type="text" placeholder="Name">
+												<input name="name" id="name" type="text" placeholder="Name">
 											</li>
 											<li>
-												<input id="email" type="text" placeholder="Email">
+												<input name="email" id="email" type="text" placeholder="Email">
 											</li>
 										</ul>
 									</div>
 									<div class="last">
-										<textarea id="message" placeholder="Message"></textarea>
+										<textarea name="message" id="message" placeholder="Message"></textarea>
 									</div>
 									<div class="shane_tm_button">
 										<a id="send_message" href="#"><span>Send Message</span></a>
