--- a/original/index.html
+++ b/original/index.html
@@ -128,7 +128,7 @@
             </span>
           </div>
           <div class="shane_tm_button">
-            <a href="img/resume/resume.jpg" download><span>Download CV</span></a>
+            <a href="https://calendly.com/luisjoseborges/30min" download><span>Schedule a call</span></a>
           </div>
         </div>
       </div>
