preloader included content started

--- a/original/index.html
+++ b/original/index.html
@@ -160,10 +160,10 @@
             <ul>
               <li><p><label>Birthday:</label><span>23.10.1985</span></p></li>
               <li><p><label>Age:</label><span>34</span></p></li>
-              <li><p><label>Address:</label><span>Weserstr. 16, 12047, Berlin</span></p></li>
+              <li><p><label>Address:</label><span>Weserstr. 16, 12047</span></p></li>
               <li><p><label>Email:</label><span>hello@luisjoseborges.com</span></p></li>
               <li><p><label>Phone:</label><span>+49 1573 2619095</span></p></li>
-              <li><p><label>Website:</label><span>www.luisjoseborges.com</span></p></li>
+              <li><p><label>Website:</label><a href="https://www.fizzibl.com/">www.fizzibl.com</a></p></li>
             </ul>
 					</div>
 				</div>
@@ -304,25 +304,25 @@
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/joystick.svg" alt="" />
-								<span>Playstation</span>
+								<span>Innovation</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/book.svg" alt="" />
-								<span>Reading</span>
+								<span>Programming</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/plane.svg" alt="" />
-								<span>Traveling</span>
+								<span>Entrepreneurship</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/code.svg" alt="" />
-								<span>Programming</span>
+								<span>Running</span>
 							</div>
 						</li>
 					</ul>
