--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,8 @@
 <link rel="stylesheet" type="text/css" href="css/onePage.css" />
 <link rel="stylesheet" type="text/css" href="css/elements.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="icon" type="image/png" href="img/about/ljb.png"/>
+
 <!--[if lt IE 9]> <script type="text/javascript" src="js/modernizr.custom.js"></script> <![endif]-->
 <!-- /STYLES -->
 
