all page styled and icons added

--- a/html/index.html
+++ b/html/index.html
@@ -83,19 +83,19 @@
 			<li>
 				<a href="#resume">
 					<img class="svg" src="img/svg/document.svg" alt="" />
-					<span>Resume</span>
+					<span>Experience</span>
 				</a>
 			</li>
 			<li>
 				<a href="#works">
 					<img class="svg" src="img/svg/briefcase.svg" alt="" />
-					<span>Works</span>
+					<span>Work</span>
 				</a>
 			</li>
 			<li>
 				<a href="#news">
 					<img class="svg" src="img/svg/paper.svg" alt="" />
-					<span>News</span>
+					<span>Blog</span>
 				</a>
 			</li>
 			<li>
@@ -130,7 +130,7 @@
             </span>
           </div>
           <div class="shane_tm_button">
-            <a href="https://calendly.com/luisjoseborges/30min" download><span>Schedule a call</span></a>
+            <a href="https://calendly.com/luisjoseborges/30min" target="_blank"><span>Schedule a call</span></a>
           </div>
         </div>
       </div>
@@ -176,36 +176,50 @@
 					<ul>
 						<li>
 							<div class="list_inner">
-								<img class="svg" src="img/svg/creativity.svg" alt="" />
-								<h3>Creative Design</h3>
+								<img class="svg" src="img/svg/innovation.svg" alt="" />
+								<h3>Innovation Sprints</h3>
 								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
-								<img class="svg" src="img/svg/code.svg" alt="" />
+								<img class="svg" src="img/svg/tactics.svg" alt="" />
+								<h3>Strategy & Goal-setting</h3>
+								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+							</div>
+						</li>
+						<li>
+							<div class="list_inner">
+								<img class="svg" src="img/svg/coding.svg" alt="" />
 								<h3>Web Development</h3>
 								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
-								<img class="svg" src="img/svg/telegram.svg" alt="" />
-								<h3>Brand Identity</h3>
+								<img class="svg" src="img/svg/consulting.svg" alt="" />
+								<h3>Innovation Consulting</h3>
 								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
 							</div>
 						</li>
-						<li>
-							<div class="list_inner">
-								<img class="svg" src="img/svg/photoshop.svg" alt="" />
-								<h3>Adobe Photoshop</h3>
-								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
-							</div>
-						</li>
+            <li>
+              <div class="list_inner">
+                <img class="svg" src="img/svg/coaching.svg" alt="" />
+                <h3>Startup Coaching</h3>
+                <p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+              </div>
+            </li>
+            <li>
+              <div class="list_inner">
+                <img class="svg" src="img/svg/united.svg" alt="" />
+                <h3>Offsites' Facilitation</h3>
+                <p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+              </div>
+            </li>
 					</ul>
 				</div>
 				<div class="shane_tm_second_title">
-					<span>Our Clients</span>
+					<span>Great companies I've worked with:</span>
 				</div>
 				<div class="shane_tm_partners">
 					<ul class="owl-carousel">
@@ -213,10 +227,10 @@
 							<img class="dark" src="img/partners/1.png" alt="" /> <!-- FOR LIGHT MODE -->
 							<img class="light" src="img/partners/light/1.png" alt="" /> <!-- FOR DARK MODE -->
 						</li>
-						<li class="item">
-							<img class="dark" src="img/partners/2.png" alt="" /> <!-- FOR LIGHT MODE -->
-							<img class="light" src="img/partners/light/2.png" alt="" /> <!-- FOR DARK MODE -->
-						</li>
+            <li class="item">
+              <img class="dark" src="img/partners/2.png" alt="" /> <!-- FOR LIGHT MODE -->
+              <img class="light" src="img/partners/light/2.png" alt="" /> <!-- FOR DARK MODE -->
+            </li>
 						<li class="item">
 							<img class="dark" src="img/partners/3.png" alt="" /> <!-- FOR LIGHT MODE -->
 							<img class="light" src="img/partners/light/3.png" alt="" /> <!-- FOR DARK MODE -->
@@ -229,24 +243,28 @@
 							<img class="dark" src="img/partners/5.png" alt="" /> <!-- FOR LIGHT MODE -->
 							<img class="light" src="img/partners/light/5.png" alt="" /> <!-- FOR DARK MODE -->
 						</li>
+            <li class="item">
+              <img class="dark" src="img/partners/6.png" alt="" /> <!-- FOR LIGHT MODE -->
+              <img class="light" src="img/partners/light/6.png" alt="" /> <!-- FOR DARK MODE -->
+            </li>
 					</ul>
 				</div>
 				<div class="shane_tm_second_title">
-					<span>What Customers Say</span>
+					<span>What customers say:</span>
 				</div>
 				<div class="shane_tm_testimonials">
 					<ul class="owl-carousel">
 						<li class="item">
 							<div class="list_inner">
 								<img class="svg" src="img/svg/quote-1.svg" alt="" />
-								<p class="text">I can't believe I got support and my problem resolved in just minutes from posting my question. Simply amazing team and amazing theme! Thank you! I am happy with my purchase.</p>
+								<p class="text">I had the pleasure of working with Luis on developing a new product for Zalando. I value a lot his passion for getting things done in a short time (even under time pressure) by applying innovative approaches and challenging the status quo. In addition, I could benefit a lot from his profound knowledge of Design Thinking and Business Model principles and expertise in conducting successful Design Sprints.</p>
 								<div class="details">
 									<div class="image">
 										<div class="main" data-img-url="img/about/2.jpg"></div>
 									</div>
 									<div class="name">
-										<h3>Evan Brook</h3>
-										<span>Photographer</span>
+										<h3>Svetoslava Ande</h3>
+										<span>Manager @ Zalando, SE</span>
 									</div>
 								</div>
 							</div>
@@ -254,14 +272,14 @@
 						<li class="item">
 							<div class="list_inner">
 								<img class="svg" src="img/svg/quote-1.svg" alt="" />
-								<p class="text">I purchased the theme a few weeks ago. I had some issues with the theme, I asked customer support to help me with and they were helpful and kind to help me with all my problems.</p>
+								<p class="text">The session with Luis was in-depth and provided us with everything we needed to directly get started with our own OKRs at CoWomen. OKRs helped us to know what to focus on in our business and to measure our progress on a regular basis. Since then, we reflect on our goals weekly, have an easy and transparent way to include new team members in current events and strategy and a good basis to discuss progress.</p>
 								<div class="details">
 									<div class="image">
-										<div class="main" data-img-url="img/about/10.jpg"></div>
+										<div class="main" data-img-url="img/about/4.jpg"></div>
 									</div>
 									<div class="name">
-										<h3>Moana Gomez</h3>
-										<span>Web Designer</span>
+										<h3>Sara-Marie Wiechmann</h3>
+										<span>Co-Founder @ CoWomen</span>
 									</div>
 								</div>
 							</div>
@@ -269,29 +287,29 @@
 						<li class="item">
 							<div class="list_inner">
 								<img class="svg" src="img/svg/quote-1.svg" alt="" />
-								<p class="text">Awesome template, well written code and looks great on any platform. The customer support is very helpful and as huge asset to this template. I highly recommend all.</p>
-								<div class="details">
-									<div class="image">
-										<div class="main" data-img-url="img/about/1.jpg"></div>
-									</div>
-									<div class="name">
-										<h3>Maria Trump</h3>
-										<span>Blogger</span>
-									</div>
-								</div>
-							</div>
-						</li>
-						<li class="item">
-							<div class="list_inner">
-								<img class="svg" src="img/svg/quote-1.svg" alt="" />
-								<p class="text">Really the Code, Support, and design are awesome and its good support they are giving. They give an instant solution to our needs. Really awesome. I will strongly recommend to my friends.</p>
+								<p class="text">Luis was the sprint master in two innovation projects in did with the Innovation Lab at Zalando. His energizing and engaging demeanor and incredible wealth of creativity when it comes to tackling challenges is inspiring. He also brings a massive amount of method and user research knowledge to the table that really helps any sprint to succeed, even when challenges arise. He always stays positive, constructive, and patient while challenging teams where necessary. It was a pleasure to work with and I cannot recommend him enough.</p>
 								<div class="details">
 									<div class="image">
 										<div class="main" data-img-url="img/about/3.jpg"></div>
 									</div>
 									<div class="name">
-										<h3>Steve Collins</h3>
-										<span>Art. Group</span>
+										<h3>Franziska Roth</h3>
+										<span>Head of Product Research @ GROPYUS</span>
+									</div>
+								</div>
+							</div>
+						</li>
+						<li class="item">
+							<div class="list_inner">
+								<img class="svg" src="img/svg/quote-1.svg" alt="" />
+								<p class="text">Thank you very much for the hands-on session. Today you (we) kicked off a game changer. You nailed it. I loved your energy and your style! Competent, on the point, smooth, awesome mood, funny! I liked it very much and how professional you were with the examples: great outcome and high impact.</p>
+								<div class="details">
+									<div class="image">
+										<div class="main" data-img-url="img/about/5.jpg"></div>
+									</div>
+									<div class="name">
+										<h3>Helmut Dahl</h3>
+										<span>Sales Director</span>
 									</div>
 								</div>
 							</div>
@@ -305,25 +323,25 @@
           <ul>
             <li>
               <div class="list_inner">
-                <img class="svg" src="img/svg/joystick.svg" alt="" />
+                <img class="svg" src="img/svg/launch.svg" alt="" />
                 <span>Innovation</span>
               </div>
             </li>
             <li>
               <div class="list_inner">
-                <img class="svg" src="img/svg/book.svg" alt="" />
+                <img class="svg" src="img/svg/coding.svg" alt="" />
                 <span>Programming</span>
               </div>
             </li>
             <li>
               <div class="list_inner">
-                <img class="svg" src="img/svg/plane.svg" alt="" />
+                <img class="svg" src="img/svg/fund.svg" alt="" />
                 <span>Entrepreneurship</span>
               </div>
             </li>
             <li>
               <div class="list_inner">
-                <img class="svg" src="img/svg/code.svg" alt="" />
+                <img class="svg" src="img/svg/run.svg" alt="" />
                 <span>Running</span>
               </div>
             </li>
@@ -336,36 +354,36 @@
 					<ul>
 						<li>
 							<div class="list_inner">
-								<img class="svg" src="img/svg/paperw.svg" alt="" />
-								<h3>777+</h3>
-								<span>Projects Finished</span>
+								<img class="svg" src="img/svg/agile.svg" alt="" />
+								<h3>20+</h3>
+								<span>Design Sprints ran (offline/online)</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/emoji.svg" alt="" />
-								<h3>10K+</h3>
-								<span>Happy Clients</span>
+								<h3>90/100</h3>
+								<span>customer satisfaction (NPS)</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
-								<img class="svg" src="img/svg/medal.svg" alt="" />
-								<h3>188+</h3>
-								<span>Awards Won</span>
+								<img class="svg" src="img/svg/money.svg" alt="" />
+								<h3>+5,000€</h3>
+								<span>Raised in fundraising activities</span>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
-								<img class="svg" src="img/svg/favorite.svg" alt="" />
-								<h3>4.9</h3>
-								<span>User Rating</span>
+								<img class="svg" src="img/svg/runner.svg" alt="" />
+								<h3>8 Marathons</h3>
+								<span>Finisher at NYC, Berlin, Chicago & Tokyo (4/6 WMM)</span>
 							</div>
 						</li>
 					</ul>
 				</div>
-				<div class="shane_tm_second_title">
-					<span>Sertificates</span>
+				<!-- <div class="shane_tm_second_title">
+					<span>Certificates</span>
 				</div>
 				<div class="shane_tm_sertificate">
 					<ul class="owl-carousel">
@@ -394,7 +412,7 @@
 							</div>
 						</li>
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<!-- /ABOUT -->
@@ -612,11 +630,11 @@
 								<div class="overlay"></div>
 								<div class="desc">
 									<div class="in">
-										<h3>YouTube Video</h3>
-										<span>Video</span>
+										<h3>VVAIS</h3>
+										<span>Crowdunding Campaign</span>
 									</div>
 								</div>
-								<a class="full_link popup-youtube" href="https://www.youtube.com/watch?v=iIrSCm_0Sj4"></a>
+								<a class="full_link popup-youtube" href="https://www.youtube.com/watch?v=0X9coRXjwcI"></a>
 							</div>
 						</li>
 						<li class="masonry_item popupimage">
@@ -725,9 +743,10 @@
 		<div id="news" class="shane_tm_section">
 			<div class="shane_tm_news">
 				<div class="shane_tm_main_title">
-					<h3>Latest <span class="coloring">News</span></h3>
+					<h3>Latest <span class="coloring">Blog posts</span></h3>
+          <p>(Work in progress...)</p>
 				</div>
-				<div class="news_inner">
+<!-- 				<div class="news_inner">
 					<ul>
 						<li>
 							<div class="list_inner">
@@ -833,7 +852,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+ -->			</div>
 		</div>
 		<!-- /NEWS -->
 
@@ -894,12 +913,12 @@
 								</form>
 							</div>
 						</div>
-						<div class="right">
+<!-- 						<div class="right">
 							<div class="map_wrap">
 								<div class="map" id="ieatmaps"></div>
 							</div>
 						</div>
-					</div>
+ -->					</div>
 				</div>
 			</div>
 		</div>
