--- a/html/index.html
+++ b/html/index.html
@@ -156,7 +156,9 @@
                 </span>
               </span>
             </div>
-            <p>Hi! My name is Luis José Borges. I am a Web Developer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional Web developer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration from discussion and collaboration.</p>
+            <p>Hi! My name is Luis José Borges. I am an Entrepreneur based in Berlin and originally from Venezuela. I've dedicated most of professional
+              career working in the field of innovation and continuous improvement working in companies ranging from automotive, tech and startups.
+              I've recently founded my own company in which I offer consulting services and product development. Let's get in touch!</p>
           </div>
           <div class="right">
             <ul>
@@ -178,42 +180,42 @@
 							<div class="list_inner">
 								<img class="svg" src="img/svg/innovation.svg" alt="" />
 								<h3>Innovation Sprints</h3>
-								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+								<p>Facilitation, trainings and talks for remote and in-person Design Sprints created by Google Ventures.</p>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/tactics.svg" alt="" />
 								<h3>Strategy & Goal-setting</h3>
-								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+                <p>Trainings, workshops and program design based on Objectives & Key Results (OKRs).</p>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/coding.svg" alt="" />
 								<h3>Web Development</h3>
-								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+								<p>Landing pages, web applications and e-commerce design and development.</p>
 							</div>
 						</li>
 						<li>
 							<div class="list_inner">
 								<img class="svg" src="img/svg/consulting.svg" alt="" />
 								<h3>Innovation Consulting</h3>
-								<p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+								<p>Intrapreneurship programs, innovation strategy, maturity models, corporate innovation.</p>
 							</div>
 						</li>
             <li>
               <div class="list_inner">
                 <img class="svg" src="img/svg/coaching.svg" alt="" />
                 <h3>Startup Coaching</h3>
-                <p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+                <p>Customer Development, Lean Startup, Business Model Design, Bootstrapping and Growth Hacking.</p>
               </div>
             </li>
             <li>
               <div class="list_inner">
                 <img class="svg" src="img/svg/united.svg" alt="" />
                 <h3>Offsites' Facilitation</h3>
-                <p>Web design is what creates the overall look and feel when you’re using a website. It’s the process of planning...</p>
+                <p>Desing and facilitation of team retreats: purpose, culture, values, goal-setting and team building.</p>
               </div>
             </li>
 					</ul>
@@ -431,10 +433,16 @@
                   <h3>2019 - Current</h3>
                 </div>
                 <div class="second">
-                  <h3>Founder & CEO,<br />fizzibl GmbH</h3>
+                  <h3>Founder & CEO,<br/>fizzibl GmbH</h3>
+                  <p>📍Berlin</p>
                 </div>
                 <div class="third">
-                  <p>With 20 years experience as a developer, I have acquired the skills and knowledge necessary.</p>
+                  <ul>
+                    <li></li>
+                  </ul>
+                  <p>Web & Product Development<br>
+                    Innovation Consulting<br>
+                    Remote Trainings & Workshops</p>
                 </div>
               </div>
             </li>
@@ -444,23 +452,34 @@
                   <h3>2016 - 2018</h3>
                 </div>
                 <div class="second">
-                  <h3>Innovation Manager,<br />Zalando, SE</h3>
+                  <h3>Innovation Manager,<br/>Zalando, SE</h3>
+                  <p>📍Berlin</p>
                 </div>
                 <div class="third">
-                  <p>With 20 years experience as a developer, I have acquired the skills and knowledge necessary.</p>
+                  <p>Intrapreneurship<br>
+                    Corporate Entrepreneurship<br>
+                    Innovation Strategy<br>
+                    Business Model Innovation<br>
+                    Design Sprint Master</p>
                 </div>
               </div>
             </li>
             <li>
               <div class="list_inner">
                 <div class="first">
-                  <h3>2015 - 2016</h3>
+                  <h3>2016 - 2019</h3>
                 </div>
                 <div class="second">
-                  <h3>Master in International Business Management,<br />Berlin School of Economics and Law</h3>
+                  <h3>Startu-up Mentor,<br/>enpact.org</h3>
+                  <p>📍Tunisia, Nigeria & Ghana</p>
                 </div>
                 <div class="third">
-                  <p>With 20 years experience as a developer, I have acquired the skills and knowledge necessary.</p>
+                  <p>Product innovation <br>
+                    Financial models <br>
+                    Pitching <br>
+                    Bootstrapping <br>
+                    Marketing
+                  </p>
                 </div>
               </div>
             </li>
@@ -470,10 +489,13 @@
                   <h3>2008 - 2014</h3>
                 </div>
                 <div class="second">
-                  <h3>Project Management,<br />Toyota de Venezuela</h3>
+                  <h3>Project Manager,<br/>Toyota Motors</h3>
+                  <p>📍Venezuela, Japan & Brasil</p>
                 </div>
                 <div class="third">
-                  <p>With 20 years experience as a developer, I have acquired the skills and knowledge necessary.</p>
+                  <p>Global projects coordination<br>
+                    Engineering changes<br>
+                    New product launch</p>
                 </div>
               </div>
             </li>
@@ -525,7 +547,7 @@
                 <div class="list_inner">
                   <div class="details">
                     <span class="name">Shopify</span>
-                    <span class="number">80%</span>
+                    <span class="number">90%</span>
                   </div>
                   <div class="progress" data-value="85">
                     <div class="bar"></div>
@@ -565,7 +587,7 @@
                 <div class="list_inner">
                   <div class="details">
                     <span class="name">German</span>
-                    <span class="number">60%</span>
+                    <span class="number">55%</span>
                   </div>
                   <div class="progress" data-value="80">
                     <div class="bar"></div>
@@ -595,18 +617,19 @@
 			<div class="shane_tm_works">
 				<div class="shane_tm_main_title">
 					<h3>Creative <span class="coloring">Works</span></h3>
+          <p>(Work in progress...)</p>
 				</div>
 				<div class="portfolio_filter">
 					<ul>
 						<li><a href="#" class="current" data-filter="*">All</a></li>
-						<li><a href="#" data-filter=".localvideo">Local Video</a></li>
+<!-- 						<li><a href="#" data-filter=".localvideo">Local Video</a></li>
 						<li><a href="#" data-filter=".youtubevideo">YouTube Video</a></li>
 						<li><a href="#" data-filter=".popupimage">Popup Image</a></li>
-					</ul>
+ -->					</ul>
 				</div>
 				<div class="portfolio_list">
 					<ul class="masonry gallery_zoom">
-						<li class="masonry_item localvideo">
+<!-- 						<li class="masonry_item localvideo">
 							<div class="list_inner">
 								<img src="img/portfolio/1200x1200.jpg" alt="" />
 								<div class="video-wrapper">
@@ -624,7 +647,7 @@
 								<a class="full_link" href="portfolio-single-half.html"></a>
 							</div>
 						</li>
-						<li class="masonry_item youtubevideo">
+ -->						<li class="masonry_item youtubevideo">
 							<div class="list_inner">
 								<img src="img/portfolio/2.jpg" alt="" />
 								<div class="overlay"></div>
@@ -637,7 +660,7 @@
 								<a class="full_link popup-youtube" href="https://www.youtube.com/watch?v=0X9coRXjwcI"></a>
 							</div>
 						</li>
-						<li class="masonry_item popupimage">
+<!-- 						<li class="masonry_item popupimage">
 							<div class="list_inner">
 								<img src="img/portfolio/3.jpg" alt="" />
 								<div class="overlay"></div>
@@ -667,8 +690,8 @@
 								</div>
 								<a class="full_link" href="portfolio-single-half.html"></a>
 							</div>
-						</li>
-						<li class="masonry_item popupimage">
+						</li> -->
+<!-- 						<li class="masonry_item popupimage">
 							<div class="list_inner">
 								<img src="img/portfolio/4.jpg" alt="" />
 								<div class="overlay"></div>
@@ -733,7 +756,7 @@
 								<a class="full_link zoom" href="img/portfolio/5.jpg"></a>
 							</div>
 						</li>
-					</ul>
+ -->					</ul>
 				</div>
 			</div>
 		</div>
@@ -746,26 +769,26 @@
 					<h3>Latest <span class="coloring">Blog posts</span></h3>
           <p>(Work in progress...)</p>
 				</div>
-<!-- 				<div class="news_inner">
+				<div class="news_inner">
 					<ul>
 						<li>
 							<div class="list_inner">
 								<div class="image">
 									<img src="img/news/1000x700.jpg" alt="" />
 									<div class="main" data-img-url="img/news/1.jpg"></div>
-									<span class="category">Branding</span>
-									<a class="full_link" href="blog-single-half.html"></a>
+									<span class="category">Innovation</span>
+									<a class="full_link" href="https://medium.com/@borgesluisj/how-to-run-your-design-sprint-when-remote-work-is-the-new-order-d2a220c141a9" target="_blank"></a>
 								</div>
 								<div class="details">
-									<span class="date">July 25, 2020</span>
-									<h3 class="title"><a href="blog-single-half.html">Absolut Rebrand as Part of Their Global Strategy</a></h3>
+									<span class="date">March 25, 2020</span>
+									<h3 class="title"><a href="https://medium.com/@borgesluisj/how-to-run-your-design-sprint-when-remote-work-is-the-new-order-d2a220c141a9" target="_blank">How to run your Design Sprint when Remote Work is the new order.</a></h3>
 									<div class="shane_tm_read_more">
-										<a href="blog-single-half.html">Read More<span class="arrow"></span></a>
+										<a href="https://medium.com/@borgesluisj/how-to-run-your-design-sprint-when-remote-work-is-the-new-order-d2a220c141a9" target="_blank">Read More<span class="arrow"></span></a>
 									</div>
 								</div>
 							</div>
 						</li>
-						<li>
+	<!-- 					<li>
 							<div class="list_inner">
 								<div class="image">
 									<img src="img/news/1000x700.jpg" alt="" />
@@ -850,9 +873,9 @@
 								</div>
 							</div>
 						</li>
-					</ul>
+	 -->				</ul>
 				</div>
- -->			</div>
+			</div>
 		</div>
 		<!-- /NEWS -->
 
