--- a/html/index.html
+++ b/html/index.html
@@ -18,12 +18,21 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<meta name="description" content="Website of Luis José Borges">
-<meta name="author" content="LJBS">
+<meta name="description" content="Website of Luis J. Borges">
+<meta name="author" content="Luis José Borges">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Luis José Borges | Founder & CEO</title>
+
+<meta property="og:image" content="img/about/ljb.png" />
+
+<meta property="og:description" content="Personal website of Luis José Borges. Professional career, achievements, interests and hobbies." />
+
+<meta property="og:url"content="http://www.luisjoseborges.com/" />
+
+<meta property="og:title" content="Personal website of Luis J. Borges" />
+
+<title>Luis J. Borges | Founder & CEO</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -516,7 +525,7 @@
                     <span class="name">Javascript</span>
                     <span class="number">50%</span>
                   </div>
-                  <div class="progress" data-value="95">
+                  <div class="progress" data-value="50">
                     <div class="bar"></div>
                   </div>
                 </div>
@@ -527,7 +536,7 @@
                     <span class="name">HTML &amp; CSS</span>
                     <span class="number">95%</span>
                   </div>
-                  <div class="progress" data-value="90">
+                  <div class="progress" data-value="95">
                     <div class="bar"></div>
                   </div>
                 </div>
@@ -538,7 +547,7 @@
                     <span class="name">Ruby & Ruby on Rails</span>
                     <span class="number">70%</span>
                   </div>
-                  <div class="progress" data-value="80">
+                  <div class="progress" data-value="70">
                     <div class="bar"></div>
                   </div>
                 </div>
@@ -549,7 +558,7 @@
                     <span class="name">Shopify</span>
                     <span class="number">90%</span>
                   </div>
-                  <div class="progress" data-value="85">
+                  <div class="progress" data-value="90">
                     <div class="bar"></div>
                   </div>
                 </div>
@@ -578,7 +587,7 @@
                     <span class="name">Spanish</span>
                     <span class="number">100%</span>
                   </div>
-                  <div class="progress" data-value="90">
+                  <div class="progress" data-value="100">
                     <div class="bar"></div>
                   </div>
                 </div>
@@ -589,7 +598,7 @@
                     <span class="name">German</span>
                     <span class="number">55%</span>
                   </div>
-                  <div class="progress" data-value="80">
+                  <div class="progress" data-value="55">
                     <div class="bar"></div>
                   </div>
                 </div>
@@ -600,7 +609,7 @@
                     <span class="name">Japanese</span>
                     <span class="number">70%</span>
                   </div>
-                  <div class="progress" data-value="85">
+                  <div class="progress" data-value="70">
                     <div class="bar"></div>
                   </div>
                 </div>
