--- a/html/index.html
+++ b/html/index.html
@@ -393,7 +393,7 @@
 						</li>
 					</ul>
 				</div>
-				<!-- <div class="shane_tm_second_title">
+				<div class="shane_tm_second_title">
 					<span>Certificates</span>
 				</div>
 				<div class="shane_tm_sertificate">
@@ -401,29 +401,45 @@
 						<li class="item">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/sertificate/600-375.jpg" alt="" />
-									<div class="main" data-img-url="img/sertificate/1.jpg"></div>
+									<img src="img/certificate/600-375.jpg" alt="" />
+									<div class="main" data-img-url="img/certificate/1.jpg"></div>
 								</div>
 							</div>
 						</li>
 						<li class="item">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/sertificate/600-375.jpg" alt="" />
-									<div class="main" data-img-url="img/sertificate/1.jpg"></div>
+									<img src="img/certificate/600-375.jpg" alt="" />
+									<div class="main" data-img-url="img/certificate/2.jpg"></div>
 								</div>
 							</div>
 						</li>
 						<li class="item">
 							<div class="list_inner">
 								<div class="image">
-									<img src="img/sertificate/600-375.jpg" alt="" />
-									<div class="main" data-img-url="img/sertificate/1.jpg"></div>
+									<img src="img/certificate/600-375.jpg" alt="" />
+									<div class="main" data-img-url="img/certificate/3.jpg"></div>
 								</div>
 							</div>
 						</li>
+            <li class="item">
+              <div class="list_inner">
+                <div class="image">
+                  <img src="img/certificate/600-375.jpg" alt="" />
+                  <div class="main" data-img-url="img/certificate/4.jpg" id="certificate-jp"></div>
+                </div>
+              </div>
+            </li>
+            <li class="item">
+              <div class="list_inner">
+                <div class="image">
+                  <img src="img/certificate/600-375.jpg" alt="" />
+                  <div class="main" data-img-url="img/certificate/5.jpg" id="certificate-de"></div>
+                </div>
+              </div>
+            </li>
 					</ul>
-				</div> -->
+				</div>
 			</div>
 		</div>
 		<!-- /ABOUT -->
