updated links to target blank

--- a/html/index.html
+++ b/html/index.html
@@ -175,9 +175,9 @@
               <li><p><label>Address:</label><span>Weserstr. 16, 12047</span></p></li>
               <li><p><label>Email:</label><span>borgesluisj@gmail.com</span></p></li>
               <li><p><label>Phone:</label><span>+49 1573 2619095</span></p></li>
-              <li><p><label>Website:</label><a href="https://www.fizzibl.com/">www.fizzibl.com</a></p></li>
-              <li><p><label><a href="https://www.linkedin.com/in/luisjborges/">LinkedIn</a></label></p></li>
-              <li><p><label><a href="https://github.com/luisjborges">Github</a></label></p></li>
+              <li><p><label>Website:</label><a href="https://www.fizzibl.com/" target="_blank">www.fizzibl.com</a></p></li>
+              <li><p><label><a href="https://www.linkedin.com/in/luisjborges/" target="_blank">LinkedIn</a></label></p></li>
+              <li><p><label><a href="https://github.com/luisjborges" target="_blank">Github</a></label></p></li>
             </ul>
           </div>
         </div>
@@ -528,7 +528,7 @@
           </ul>
         </div>
         <div class="shane_tm_button">
-          <a href="https://www.linkedin.com/in/luisjborges/" download><span>My LinkedIn page</span></a>
+          <a href="https://www.linkedin.com/in/luisjborges/" target="_blank"><span>My LinkedIn page</span></a>
         </div>
         <div class="shane_tm_skills">
           <div class="left">
