changed social sharing picture

--- a/html/index.html
+++ b/html/index.html
@@ -24,9 +24,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
-<meta property="og:image" content="img/about/ljb.png" />
+<meta property="og:image" content="img/about/1.png" />
 
-<meta property="og:description" content="Personal website of Luis José Borges. Professional career, achievements, interests and hobbies." />
+<meta property="og:description" content="Personal website of Luis José Borges. Professional career, achievements, certificates, interests, hobbies, etc." />
 
 <meta property="og:url"content="http://www.luisjoseborges.com/" />
 
