changed social sharing content

--- a/html/index (commented).html
+++ b/html/index (commented).html
@@ -28,7 +28,7 @@
 
 <meta property="og:description" content="Personal website of Luis José Borges. Professional career, achievements, interests and hobbies." />
 
-<meta property="og:url"content="http://www.luisjoseborges.com/" />
+<meta property="og:url"content="https://www.luisjoseborges.com/" />
 
 <meta property="og:title" content="Personal website of Luis J. Borges" />
 
