--- a/html/index.html
+++ b/html/index.html
@@ -26,11 +26,11 @@
 
 <meta property="og:image" content="img/about/1.png" />
 
-<meta property="og:description" content="Personal website of Luis José Borges. Professional career, achievements, certificates, interests, hobbies, etc." />
+<meta property="og:description" content="Professional career, achievements, certificates, interests, hobbies, etc." />
 
-<meta property="og:url"content="http://www.luisjoseborges.com/" />
+<meta property="og:url"content="https://www.luisjoseborges.com/" />
 
-<meta property="og:title" content="Personal website of Luis J. Borges" />
+<meta property="og:title" content="Hi! I'm Luis, nice to have you here!" />
 
 <title>Luis J. Borges</title>
 
