--- a/html/index.html
+++ b/html/index.html
@@ -17,20 +17,17 @@
 </script>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-<meta name="description" content="Website of Luis J. Borges">
-<meta name="author" content="Luis José Borges">
-
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+<!-- <meta name="description" content="Website of Luis J. Borges"> -->
+<meta name="author" content="Luis José Borges">
 
-<meta property="og:image" content="img/about/1.png" />
-
-<meta property="og:description" content="Professional career, achievements, certificates, interests, hobbies, etc." />
-
+<meta property=“og:image” content=“https://drive.google.com/file/d/1dgmBnFrdV0Q0e4_R3_ahw0hEM0mdoU78/view?usp=sharing” />
+<meta property=”og:image:width” content=”180″ />
+<meta property=”og:image:height” content=”110″ />
 <meta property="og:url"content="https://www.luisjoseborges.com/" />
-
 <meta property="og:title" content="Hi! I'm Luis, nice to have you here!" />
+<meta property="og:description" content="Here you can find my professional career, achievements, certificates, interests, hobbies, etc." />
 
 <title>Luis J. Borges</title>
 
