--- a/html/index.html
+++ b/html/index.html
@@ -20,16 +20,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 <!-- <meta name="description" content="Website of Luis J. Borges"> -->
+<title>Luis J. Borges</title>
 <meta name="author" content="Luis José Borges">
-
 <meta property=“og:image” content=“https://drive.google.com/file/d/1dgmBnFrdV0Q0e4_R3_ahw0hEM0mdoU78/view?usp=sharing” />
 <meta property=”og:image:width” content=”40″ />
 <meta property=”og:image:height” content=”40″ />
 <meta property="og:url"content="https://www.luisjoseborges.com/" />
-<meta property="og:title" content="Hi! I'm Luis, nice to have you here!" />
-<meta property="og:description" content="Here you can find my professional career, achievements, certificates, interests, hobbies, etc." />
+<!-- <meta property="og:title" content="" /> -->
+<meta property="og:description" content="Hi! I'm Luis, nice to have you here! Here you can find my professional career, achievements, certificates, interests, hobbies, etc." />
 
-<title>Luis J. Borges</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
