Improved copywriting and added CV link

--- a/html/index.html
+++ b/html/index.html
@@ -122,20 +122,21 @@
 					<div class="image">
 						<div class="main" data-img-url="img/about/1.jpg"></div>
 					</div>
-          <h3 class="name">Luis José <span class="coloring">Borges</span></h3>
+          <h3 class="name">Luis J. <span class="coloring">Borges</span></h3>
           <div class="shane_tm_animate_text">
             <span class="cd-headline zoom"> <!-- ANIMATE TEXT VALUES: zoom, rotate-1, letters type, letters rotate-2, loading-bar, slide, clip, letters rotate-3, letters scale, push,  -->
               <span class="blc">I'm a</span>
               <span class="cd-words-wrapper">
-                <b class="is-visible">Full-stack Developer</b>
-                <b>Product Manager</b>
-                <b>Founder</b>
-                <b>CEO</b>
+                <b class="is-visible">Product Manager</b>
+                <b>Full-stack Developer</b>
+                <b>Startup Mentor</b>
+                <b>Co-Founder</b>
+<!--                 <b>CEO</b> -->
               </span>
             </span>
           </div>
           <div class="shane_tm_button">
-            <a href="https://calendly.com/luisjoseborges/30min" target="_blank"><span>Schedule a call</span></a>
+            <a href="https://drive.google.com/file/d/19mhk9KZNaSb3gJDstQ21MGE9ED63l6fo/view?usp=sharing" target="_blank"><span>Download CV</span></a>
           </div>
         </div>
       </div>
@@ -161,9 +162,10 @@
                 </span>
               </span>
             </div>
-            <p>Hi! My name is Luis José Borges. I am an Entrepreneur based in Berlin and originally from Venezuela. I've dedicated most of professional
-              career working in the field of innovation and continuous improvement working in companies ranging from automotive, tech and startups.
-              I've recently founded my own company in which I offer consulting services and product development. Let's get in touch!</p>
+            <p>Hi! My name is Luis. I'm all about lean mindset, entrepreneurship and building great products solving real problems.
+            I'm a former Project Manager at Toyota, ex-Zalando Innovation Manager and most recently the Co-Founder of a Digital & Innovation
+            Consulting company in Berlin. I was born, raised in Venezuela and since 2015, Germany has offered me a beautiful second home. <br>
+            Morning Runner, sporadic Coder and enthusiastic about Marathons, Habits' building, Well-being and Cryptocurrencies.</p>
           </div>
           <div class="right">
             <ul>
@@ -455,7 +457,7 @@
                   <h3>2019 - Current</h3>
                 </div>
                 <div class="second">
-                  <h3>Founder & CEO,<br/>fizzibl GmbH</h3>
+                  <h3>Product Manager / Co-Founder<br/>fizzibl GmbH</h3>
                   <p>📍Berlin</p>
                 </div>
                 <div class="third">
