changed to downloadable CV

--- a/html/index.html
+++ b/html/index.html
@@ -136,7 +136,7 @@
             </span>
           </div>
           <div class="shane_tm_button">
-            <a href="https://drive.google.com/file/d/19mhk9KZNaSb3gJDstQ21MGE9ED63l6fo/view?usp=sharing" target="_blank"><span>Download CV</span></a>
+            <a href="https://drive.google.com/uc?id=19mhk9KZNaSb3gJDstQ21MGE9ED63l6fo&export=download" target="_blank"><span>Download CV</span></a>
           </div>
         </div>
       </div>
